# embedded-tls-hardware

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/esp_hal/: mod.rs
