[package]
name = "embedded-tls-hardware"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Hardware acceleration for embedded-tls on many chips."
documentation = "https://docs.rs/embedded-tls-hardware"
repository = "https://github.com/hal-drv/embedded-tls-hardware"
keywords = ["embedded-tls"]
readme = "README.md"

[dependencies]
embedded-tls = { version = ">=0.17, <0.20", default-features = false }
# embedded-tls = { git = "https://github.com/drogue-iot/embedded-tls", rev = "bd13e11ce9c7605baf7018ef2b0f353ae6693016", version = "0.19", default-features = false, features = ["rsa"] }
aes-gcm = { version = "0.10", default-features = false } # old version, fit embedded-tls 0.18
cipher = "0.4" # old version
digest = "0.10" # old version
esp-hal = { version = ">=1.0, <1.2", features = ["requires-unstable"], optional = true }

[features]
default = []
esp-hal = ["dep:esp-hal"]
